--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                         <div class="hero-content">
                             <div class="hero-text">
                                 <p>I'm</p>
-                                <h1>Kate Winslet</h1>
+                                <h1>Ana Ortega</h1>
                                 <h2></h2>
-                                <div class="typed-text">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
+                                <div class="typed-text">Radióloga, Influencer, Voluntaria a Tiempo Parcial, Tripulante de Cabina, Diseñador de Interiores</div>
                             </div>
                             <div class="hero-btn">
                                 <a class="btn" href="">Hire Me</a>
@@ -94,11 +94,11 @@
                         <div class="about-content">
                             <div class="section-header text-left">
                                 <p>Learn About Me</p>
-                                <h2>10 Years Experience</h2>
+                                <h2>Construyendo mi camino</h2>
                             </div>
                             <div class="about-text">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida
+                                    .....
                                 </p>
                             </div>
                             <div class="skills">
@@ -793,3 +793,4 @@
         <script src="js/main.js"></script>
     </body>
 </html>
+
